add conf to classpath & remove PermSize