@@ -19,10 +19,10 @@ if [ -n "$PIDS" ]; then
     exit 1
 fi
 
-LIB_JARS=$DEPLOY_DIR/lib/*
+CLASS_PATH=.:$DEPLOY_DIR/conf:$DEPLOY_DIR/lib/*
 JAVA_OPTS=" -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true "
 
-JAVA_MEM_OPTS=" -server -Xmx2g -Xms2g -Xmn256m -XX:PermSize=128m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
+JAVA_MEM_OPTS=" -server -Xmx2g -Xms2g -Xmn256m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
 
 MAIN_CLASS=io.shardingjdbc.server.Bootstrap
 
@@ -31,5 +31,5 @@ if [ $# == 1 ]; then
 fi
 
 echo "Starting the $SERVER_NAME ..."
-nohup java $JAVA_OPTS $JAVA_MEM_OPTS -classpath .:$LIB_JARS $MAIN_CLASS > $STDOUT_FILE 2>&1 &
+nohup java $JAVA_OPTS $JAVA_MEM_OPTS -classpath $CLASS_PATH $MAIN_CLASS > $STDOUT_FILE 2>&1 &
 echo "Please check the STDOUT file: $STDOUT_FILE"
